cpat-blog-client/yamls/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cpat-blog-client-deployment
    app.kubernetes.io/component: cpat-blog-client
    app.kubernetes.io/instance: cpat-blog-client
    app.kubernetes.io/name: nodejs
    app.kubernetes.io/part-of: cpat-blog
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-version: 10-SCL
    version: v1
  name: cpat-blog-client-deployment
spec:
  selector:
    matchLabels:
      app: cpat-blog-client
      version: v1
  template:
    metadata:
      labels:
        app: cpat-blog-client
        version: v1
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/cpat-blog/cpat-blog-client:82a9a0e
        imagePullPolicy: Always
        name: ui
        ports:
        - containerPort: 3001
